
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int robj ;
typedef int client ;


 int C_ERR ;
 scalar_t__ C_OK ;
 double GEO_LAT_MAX ;
 double GEO_LAT_MIN ;
 double GEO_LONG_MAX ;
 double GEO_LONG_MIN ;
 int addReplySds (int *,int ) ;
 scalar_t__ getDoubleFromObjectOrReply (int *,int *,double*,int *) ;
 int sdscatprintf (int ,char*,double,double) ;
 int sdsempty () ;

int extractLongLatOrReply(client *c, robj **argv, double *xy) {
    int i;
    for (i = 0; i < 2; i++) {
        if (getDoubleFromObjectOrReply(c, argv[i], xy + i, ((void*)0)) !=
            C_OK) {
            return C_ERR;
        }
    }
    if (xy[0] < GEO_LONG_MIN || xy[0] > GEO_LONG_MAX ||
        xy[1] < GEO_LAT_MIN || xy[1] > GEO_LAT_MAX) {
        addReplySds(c, sdscatprintf(sdsempty(),
            "-ERR invalid longitude,latitude pair %f,%f\r\n",xy[0],xy[1]));
        return C_ERR;
    }
    return C_OK;
}
